--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1037,7 +1037,7 @@ nodes.weightReceivePost        = Nodos -> Peso post recibido
 nodes.weightSelfPost           = Nodos -> Peso post autorespondido
 nodes.weightSendPost           = Nodos -> Peso post enviado
 
-notched = Notched
+notched = Muesca
 
 notificationLoginSSO = Inicio de sesi\u00F3n con autenticaci\u00F3n Single Sign-On (SSO) usando credenciales previas para encriptar/desencriptar cach\u00E9.
 
