Añadido traducciones, cambiado el nombre inicial al exportar

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -556,6 +556,9 @@ log.event.competency_viewed                                     = Kompetenz ange
 log.event.completion_report_viewed                              = Abschlussbericht angezeigt
 log.event.completion_user_report_viewed                         = Nutzer-Abschlussbericht angezeigt
 log.event.config_log_created                                    = Konfigurationsdaten erzeugt
+log.event.content_content_created                               = Content created
+log.event.content_content_updated                               = Content updated
+log.event.content_content_viewed                                = Content viewed
 log.event.content_page_viewed                                   = Textseite angezeigt
 log.event.course_activity_completion_updated                    = Abschluss f\u00FCr Aktivit\u00E4t aktualisiert
 log.event.course_backup_created                                 = Kurssicherung erstellt
@@ -624,6 +627,8 @@ log.event.field_updated                                         = Feld aktualisi
 log.event.folder_updated                                        = Verzeichnis wurde aktualisiert
 log.event.grade_deleted                                         = Bewertung gel\u00F6scht
 log.event.grade_history_report_viewed                           = Bewertungsverlauf angezeigt
+log.event.grade_item_created                                    = Grade item created
+log.event.grade_item_updated                                    = Grade item updated
 log.event.grade_letter_created                                  = Bewertungschreiben erstellt
 log.event.grade_letter_deleted                                  = Bewerbungsschreiben gel\u00F6scht
 log.event.grade_letter_updated                                  = Berwertungsschreiben aktualisiert
@@ -646,6 +651,7 @@ log.event.group_updated                                         = Gruppe aktuali
 log.event.grouping_created                                      = Gruppierung angelegt
 log.event.grouping_deleted                                      = Gruppierung gel\u00F6scht
 log.event.grouping_updated                                      = Gruppierung aktualisiert
+log.event.h5p_content_viewed                                    = H5P content viewed
 log.event.insights_viewed                                       = Betrachtete Einsch\u00E4tzungen
 log.event.interactions_viewed                                   = Interaktionen angezeigt
 log.event.item_created                                          = Eintrag erstellt
@@ -870,6 +876,7 @@ log.event.wiki_page_version_deleted                             = Wikiseitenvers
 log.event.wiki_page_version_viewed                              = Wikiseitenversion angezeigt
 log.event.wiki_page_viewed                                      = Wikiseite angezeigt
 log.event.wiki_version_restored                                 = Wikiseitenversion wiederhergestellt
+log.event.xapi_statement_received                               = xAPI statement received
 log.event.xls_grade_exported                                    = Bewertung als XLS exportiert
 log.event.xml_grade_exported                                    = Bewertung als XML exportiert
 log.event.zip_archive_of_folder_downloaded                      = Verzeichnis wurde heruntergeladen
