--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -558,6 +558,9 @@ log.event.competency_viewed                                     = Comp\u00E9tenc
 log.event.completion_report_viewed                              = Rapport d'ach\u00E8vement consult\u00E9
 log.event.completion_user_report_viewed                         = Rapport utilisateur d'ach\u00E8vement consult\u00E9
 log.event.config_log_created                                    = Journal de configuration cr\u00E9\u00E9
+log.event.content_content_created                               = Content created
+log.event.content_content_updated                               = Content updated
+log.event.content_content_viewed                                = Content viewed
 log.event.content_page_viewed                                   = Page consult\u00E9e
 log.event.course_activity_completion_updated                    = Ach\u00E8vement d'activit\u00E9 modifi\u00E9
 log.event.course_backup_created                                 = Sauvegarde de cours cr\u00E9\u00E9e
@@ -627,6 +630,8 @@ log.event.field_updated                                         = Champ modifi\u
 log.event.folder_updated                                        = Dossier modifi\u00E9
 log.event.grade_deleted                                         = Note supprim\u00E9e
 log.event.grade_history_report_viewed                           = Rapport d'historique d'\u00E9valuation consult\u00E9
+log.event.grade_item_created                                    = Grade item created
+log.event.grade_item_updated                                    = Grade item updated
 log.event.grade_letter_created                                  = Note lettre cr\u00E9\u00E9e
 log.event.grade_letter_deleted                                  = Note lettre supprim\u00E9e
 log.event.grade_letter_updated                                  = Note lettre modifi\u00E9e
@@ -649,6 +654,7 @@ log.event.group_updated                                         = Groupe modifi\
 log.event.grouping_created                                      = Groupement cr\u00E9\u00E9
 log.event.grouping_deleted                                      = Groupement supprim\u00E9
 log.event.grouping_updated                                      = Groupement modifi\u00E9
+log.event.h5p_content_viewed                                    = H5P content viewed
 log.event.insights_viewed                                       = Indications consult\u00E9es
 log.event.interactions_viewed                                   = Interactions consult\u00E9es
 log.event.item_created                                          = \u00C9l\u00E9ment cr\u00E9\u00E9
@@ -873,6 +879,7 @@ log.event.wiki_page_version_deleted                             = Version de pag
 log.event.wiki_page_version_viewed                              = Version de page de wiki consult\u00E9e
 log.event.wiki_page_viewed                                      = Page de wiki consult\u00E9e
 log.event.wiki_version_restored                                 = Page de wiki restaur\u00E9e
+log.event.xapi_statement_received                               = xAPI statement received
 log.event.xls_grade_exported                                    = Notes export\u00E9es en format XLS
 log.event.xml_grade_exported                                    = Notes export\u00E9es en format XML
 log.event.zip_archive_of_folder_downloaded                      = Archive ZIP d'un dossier t\u00E9l\u00E9charg\u00E9e
