--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -558,6 +558,9 @@ log.event.competency_viewed                                     = Compet\u00EAnc
 log.event.completion_report_viewed                              = Relat\u00F3rio de conclus\u00E3o visualizado
 log.event.completion_user_report_viewed                         = Relat\u00F3rio de conclus\u00E3o visualizado
 log.event.config_log_created                                    = Criado registo de configura\u00E7\u00E3o
+log.event.content_content_created                               = Content created
+log.event.content_content_updated                               = Content updated
+log.event.content_content_viewed                                = Content viewed
 log.event.content_page_viewed                                   = Conte\u00FAdo da p\u00E1gina visualizado
 log.event.course_activity_completion_updated                    = Atualiza\u00E7\u00E3o da conclus\u00E3o de atividades da disciplina
 log.event.course_backup_created                                 = Criada c\u00F3pia de seguran\u00E7a da disciplina
@@ -627,6 +630,8 @@ log.event.field_updated                                         = Campo atualiza
 log.event.folder_updated                                        = Pasta atualizada
 log.event.grade_deleted                                         = Nota eliminada
 log.event.grade_history_report_viewed                           = Relat\u00F3rio de hist\u00F3rico das notas visualizado
+log.event.grade_item_created                                    = Grade item created
+log.event.grade_item_updated                                    = Grade item updated
 log.event.grade_letter_created                                  = Nota alfab\u00E9tica criada
 log.event.grade_letter_deleted                                  = Nota alfab\u00E9tica apagada
 log.event.grade_letter_updated                                  = Nota alfab\u00E9tica alterada
@@ -649,6 +654,7 @@ log.event.group_updated                                         = Grupo atualiza
 log.event.grouping_created                                      = Agrupamento criado
 log.event.grouping_deleted                                      = Agrupamento apagado
 log.event.grouping_updated                                      = Agrupamento atualizado
+log.event.h5p_content_viewed                                    = H5P content viewed
 log.event.insights_viewed                                       = Percep\u00E7\u00F5es visualizadas
 log.event.interactions_viewed                                   = Intera\u00E7\u00F5es visualizadas
 log.event.item_created                                          = Item criado
@@ -873,6 +879,7 @@ log.event.wiki_page_version_deleted                             = P\u00E1gina de
 log.event.wiki_page_version_viewed                              = P\u00E1gina de vers\u00E3o do Wiki visualizada
 log.event.wiki_page_viewed                                      = P\u00E1gina do Wiki visualizada
 log.event.wiki_version_restored                                 = P\u00E1gina de vers\u00E3o do Wiki restaurada
+log.event.xapi_statement_received                               = xAPI statement received
 log.event.xls_grade_exported                                    = Avalia\u00E7\u00E3o exportada em XLS
 log.event.xml_grade_exported                                    = Avalia\u00E7\u00E3o exportada em XML
 log.event.zip_archive_of_folder_downloaded                      = Foi descarregado um ficheiro ZIP da pasta
