--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -632,6 +632,9 @@ log.event.competency_viewed                                     = Competencia vi
 log.event.completion_report_viewed                              = Reporte de finalizaci\u00F3n visualizado
 log.event.completion_user_report_viewed                         = Reporte de usuario de finalizaci\u00F3n visualizado
 log.event.config_log_created                                    = Registro de configuraci\u00F3n creado
+log.event.content_content_created                               = Contenido creado
+log.event.content_content_updated                               = Contenido actualizado
+log.event.content_content_viewed                                = Contenido visto
 log.event.content_page_viewed                                   = P\u00E1gina de contenidos visualizada
 log.event.course_activity_completion_updated                    = Finalizaci\u00F3n de actividad de curso actualizada
 log.event.course_backup_created                                 = Copia de curso creada
@@ -701,6 +704,8 @@ log.event.field_updated                                         = Campo actualiz
 log.event.folder_updated                                        = Carpeta actualizada
 log.event.grade_deleted                                         = Calificaci\u00F3n borrada
 log.event.grade_history_report_viewed                           = Informe de historial de notas visto
+log.event.grade_item_created                                    = Elemento de calificaci\u00F3n creado
+log.event.grade_item_updated                                    = Elemento de calificaci\u00F3n actualizado
 log.event.grade_letter_created                                  = Grade letter created
 log.event.grade_letter_deleted                                  = Grade letter deleted
 log.event.grade_letter_updated                                  = Grade letter updated
@@ -723,6 +728,7 @@ log.event.group_updated                                         = Grupo actualiz
 log.event.grouping_created                                      = Agrupamiento creado
 log.event.grouping_deleted                                      = Agrupamiento eliminado
 log.event.grouping_updated                                      = Agrupamiento actualizado
+log.event.h5p_content_viewed                                    = Contenido H5P visto
 log.event.insights_viewed                                       = Intuiciones (predicciones) vistas
 log.event.interactions_viewed                                   = Interacciones visualizadas
 log.event.item_created                                          = Elemento creado
@@ -947,6 +953,7 @@ log.event.wiki_page_version_deleted                             = Versi\u00F3n d
 log.event.wiki_page_version_viewed                              = Versi\u00F3n de la p\u00E1gina wiki vista
 log.event.wiki_page_viewed                                      = P\u00E1gina wiki vista
 log.event.wiki_version_restored                                 = Versi\u00F3n de la wiki restablecida
+log.event.xapi_statement_received                               = Declaraci\u00F3n de xAPI recibida
 log.event.xls_grade_exported                                    = Calificaci\u00F3n XLS exportada
 log.event.xml_grade_exported                                    = Calificaci\u00F3n XML exportada
 log.event.zip_archive_of_folder_downloaded                      = Directorio descargado en formato Zip
