--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -255,6 +255,8 @@ confirmation = Confirmation
 
 cutGrade = Grau de passi
 
+cutGradeColor = Grau de passi
+
 diagonalColor = Diagonal line color
 
 displayXScaleTitle = T\u00EDtol de l'eix X
