--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -255,6 +255,8 @@ confirmation = Confirmation
 
 cutGrade = Grade zu Pass
 
+cutGradeColor = Grade zu Pass
+
 diagonalColor = Diagonal line color
 
 displayXScaleTitle = Titel X-Achse
