--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -329,6 +329,8 @@ confirmation = Confirmation
 
 cutGrade = Grade to pass
 
+cutGradeColor = Grade to pass color
+
 diagonalColor = Diagonal line color
 
 displayXScaleTitle = Title X-axis
