--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -329,6 +329,8 @@ confirmation = Confirmaci\u00F3n
 
 cutGrade = Nota de corte
 
+cutGradeColor = Color nota de corte
+
 diagonalColor = Color de l\u00EDnea diagonal
 
 displayXScaleTitle = T\u00EDtulo del eje X
