--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -255,6 +255,8 @@ confirmation = Confirmation
 
 cutGrade = Niveau de passe
 
+cutGradeColor = Niveau de passe
+
 diagonalColor = Diagonal line color
 
 displayXScaleTitle = Titre de l'axe X
