--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -255,6 +255,8 @@ confirmation = Confirmation
 
 cutGrade = Grado di passaggio
 
+cutGradeColor = Grado di passaggio
+
 diagonalColor = Diagonal line color
 
 displayXScaleTitle = Titolo asse X
