--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -255,6 +255,8 @@ confirmation = Confirmation
 
 cutGrade = Grau de passagem
 
+cutGradeColor = Grau de passagem
+
 diagonalColor = Diagonal line color
 
 displayXScaleTitle = T\u00EDtulo X eixo
