Traducciones y arreglado excepcion al cambiar de pestaña

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -863,9 +863,9 @@ log.event.submission_viewed_                                    = Entrega vista
 log.event.submitted_scorm_raw_score                             = Enviada puntuaci\u00F3n bruta SCORM
 log.event.submitted_scorm_status                                = Enviado estatus SCORM
 log.event.subscribers_viewed                                    = Suscriptores visualizados
-log.event.subscription_created                                  = Subscription created
-log.event.subscription_criteria_met                             = Subscription criteria met
-log.event.subscription_deleted                                  = Subscription deleted
+log.event.subscription_created                                  = Suscripci\u00F3n creada
+log.event.subscription_criteria_met                             = Se cumplen los criterios de suscripci\u00F3n
+log.event.subscription_deleted                                  = Suscripci\u00F3n eliminada
 log.event.survey_report_downloaded                              = Informe de encuesta descargado
 log.event.survey_report_viewed                                  = Informe de encuesta visto
 log.event.survey_response_submitted                             = Respuesta a la encuesta enviada
