#124 Arreglado un error en los titulso de los ejes en Mensajes de Usuarios - foros

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -66,8 +66,8 @@ FORUM_TREE_MAP_USER = Rect\u00E1ngulos por usuario
 
 FORUM_USER_POST_BAR = Mensajes de usuarios
 
-FORUM_USER_POST_BAR.xAxisTitle = Mensajes
-FORUM_USER_POST_BAR.yAxisTitle = Usuarios con mensajes
+FORUM_USER_POST_BAR.xAxisTitle = Usuarios con mensajes
+FORUM_USER_POST_BAR.yAxisTitle = Mensajes
 
 FORUM_WORD_CLOUD = Nube de palabras
 
