--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -66,8 +66,8 @@ FORUM_TREE_MAP_USER = Treemap by user
 
 FORUM_USER_POST_BAR = User posts
 
-FORUM_USER_POST_BAR.xAxisTitle = Posts
-FORUM_USER_POST_BAR.yAxisTitle = Users with posts
+FORUM_USER_POST_BAR.xAxisTitle = Users with posts
+FORUM_USER_POST_BAR.yAxisTitle = Posts
 
 FORUM_WORD_CLOUD = Word cloud
 
