Añadido la posibilidad de informar errores y caja de sugerencias

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -155,6 +155,8 @@ alertDaysElapsed = Last update warning time (days)
 
 angles = Rotation angles (comma separated)
 
+askSendReport = Send bug report? This report is anonymous. Your report will be used to help fix this bug and will never be shared in any commercial context.\r\nFor more information on what is sent, click on "Show details".\r\n\r\nThe data is saved in Microsoft Form. More information in: 
+
 backGroundImage = Background image
 
 borderLength = Line width
@@ -178,12 +180,14 @@ btnLegend = Legend
 
 btnMean = General Stats
 
-button.apply     = Apply
-button.logout    = Logout
-button.restore   = Restore Defaults
-button.save      = Save
-button.search    = Search
-button.selectall = Select all
+button.apply      = Apply
+button.logout     = Logout
+button.restore    = Restore Defaults
+button.save       = Save
+button.search     = Search
+button.selectall  = Select all
+button.send       = Send
+button.sendReport = Send report
 
 calculateMax = Calculate max
 
@@ -347,6 +351,7 @@ emptyGradeColor = Color empty grade
 
 error = Error
 
+error.cantSendReport      = Error: failed to send error
 error.chargeconfiguration = Error when importing the configuration
 error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
@@ -419,6 +424,7 @@ label.activities                  = # activity completion items
 label.calendarevents              = # calendar events
 label.categoryitem                = Category/Item:
 label.close                       = Close
+label.comment                     = Comments and suggestions:
 label.component                   = Component: 
 label.componentorevent            = Component\nEvent:
 label.componenttypes              = # component types
@@ -450,11 +456,13 @@ label.loadingstats                = Generating statistics...
 label.loadingstudents             = Student grades loaded...
 label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
+label.microsoftFormPolicy         = Microsoft Forms Privacy Policy
 label.ncourses                    = # enrolled courses
 label.never                       = Not available
 label.ngroups                     = # groups
 label.of                          = of
 label.oldPassword                 = Old Password: 
+label.optionalEmail               = Email address (optional):
 label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Password:
@@ -968,6 +976,7 @@ menu.about               = _About application
 menu.changeconfig        = _Change configuration
 menu.changesubject       = _Change course
 menu.clearselection      = _Clear selection
+menu.comments            = Send comment
 menu.coursestats         = _Course stats
 menu.edit                = _Edit
 menu.exit                = _Close
@@ -1050,6 +1059,8 @@ notched = Notched
 
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
+ok.reportSent = Bug report has been sent
+
 padding = Padding
 
 parent = parent
@@ -1079,6 +1090,8 @@ physics.solver                                 = Physics -> Solver
 physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
 
 physicsAfterDraw = Enable physics after draw
+
+prompt.comment = Write here your comments and suggestions (Maximum 4000 characters)
 
 root = course
 
@@ -1202,6 +1215,8 @@ tooltip.rol              = Role
 tooltipDecimals = Decimal tooltip
 
 transitionDuration = Transition duration (ms)
+
+url.microsoftFormPolicy = https://support.microsoft.com/en-gb/office/security-and-privacy-in-microsoft-forms-7e57f9ba-4aeb-4b1b-9e21-b75318532cd9
 
 useCircles = Use only circles
 
