--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -155,6 +155,8 @@ alertDaysElapsed = Aviso de \u00FAltima actualizaci\u00F3n (en d\u00EDas)
 
 angles = \u00C1ngulos de rotaci\u00F3n (separado por comas)
 
+askSendReport = \u00BFEnviar informe de errores? Este informe es an\u00F3nimo. Su informe se utilizar\u00E1 para ayudar a solucionar este error y nunca se compartir\u00E1 en ning\u00FAn contexto comercial.\r\nPara m\u00E1s informaci\u00F3n sobre lo que se env\u00EDa, haz clic en "Mostrar detalles".\r\n\r\nLos datos se guardan en Microsoft Form. Mas informaci\u00F3n en: 
+
 backGroundImage = Imagen de fondo
 
 borderLength = Ancho de l\u00EDnea
@@ -178,12 +180,14 @@ btnLegend = Leyenda
 
 btnMean = Estad\u00EDsticas generales
 
-button.apply     = Aplicar
-button.logout    = Cerrar sesi\u00F3n
-button.restore   = Restaurar valores por defecto
-button.save      = Guardar
-button.search    = Buscar
-button.selectall = Selecc. todos
+button.apply      = Aplicar
+button.logout     = Cerrar sesi\u00F3n
+button.restore    = Restaurar valores por defecto
+button.save       = Guardar
+button.search     = Buscar
+button.selectall  = Selecc. todos
+button.send       = Enviar
+button.sendReport = Enviar informe
 
 calculateMax = Calcular m\u00E1ximo
 
@@ -347,6 +351,7 @@ emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
 
 error = Error
 
+error.cantSendReport      = Error: no se ha podido enviar el error
 error.chargeconfiguration = Error al importar la configuraci\u00F3n
 error.csvparsing          = Error al descargar el CSV de los registros. Probablemente no tengas permiso de acceso a los registros.
 error.downloadingdata     = Error al descargar los datos.
@@ -419,6 +424,7 @@ label.activities                  = # items de finalizaci\u00F3n de actividad
 label.calendarevents              = # eventos del calendario
 label.categoryitem                = Categor\u00EDa/Item:
 label.close                       = Cerrar
+label.comment                     = Comentarios y sugerencias:
 label.component                   = Componente: 
 label.componentorevent            = Componente\nEvento:
 label.componenttypes              = # tipos de componentes
@@ -450,11 +456,13 @@ label.loadingstats                = Generando estad\u00EDsticas...
 label.loadingstudents             = D
 label.logentries                  = # entradas de registros
 label.loggedin                    = Inicio sesi\u00F3n:
+label.microsoftFormPolicy         = Pol\u00EDtica de privacidad de Microsoft Forms
 label.ncourses                    = N\u00BA Cursos matriculados
 label.never                       = No disponible
 label.ngroups                     = N\u00BA de grupos
 label.of                          = de
 label.oldPassword                 = Contrase\u00F1a antigua: 
+label.optionalEmail               = Correo electr\u00F3nico (opcional):
 label.parselog                    = Parseando los registros...
 label.participants                = Participantes
 label.pass                        = Contrase\u00F1a:
@@ -968,6 +976,7 @@ menu.about               = A_cerca de la aplicaci\u00F3n
 menu.changeconfig        = Ca_mbiar configuraci\u00F3n
 menu.changesubject       = _Cambiar curso
 menu.clearselection      = _Borrar selecci\u00F3n
+menu.comments            = Enviar comentario
 menu.coursestats         = E_stad\u00EDsticas del curso
 menu.edit                = _Editar
 menu.exit                = _Salir
@@ -1050,6 +1059,8 @@ notched = Muesca
 
 notificationLoginSSO = Inicio de sesi\u00F3n con autenticaci\u00F3n Single Sign-On (SSO) usando credenciales previas para encriptar/desencriptar cach\u00E9.
 
+ok.reportSent = Se ha enviado el informe de errores
+
 padding = Relleno
 
 parent = padre
@@ -1079,6 +1090,8 @@ physics.solver                                 = F\u00EDsica -> Algoritmo
 physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Constante del muelle
 
 physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar
+
+prompt.comment = Escriba aqu\u00ED sus comentarios y sugerencias (M\u00E1ximo 4000 car\u00E1cteres)
 
 root = curso
 
@@ -1202,6 +1215,8 @@ tooltip.rol              = Rol
 tooltipDecimals = Informaci\u00F3n de decimales
 
 transitionDuration = Duraci\u00F3n de transici\u00F3n (ms)
+
+url.microsoftFormPolicy = https://support.microsoft.com/es-es/office/seguridad-y-privacidad-en-microsoft-forms-7e57f9ba-4aeb-4b1b-9e21-b75318532cd9
 
 useCircles = Usar solo c\u00EDrculos
 
