Mejorado la ventana de envio mensajes, añadido pruga de logs

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -155,7 +155,7 @@ alertDaysElapsed = Last update warning time (days)
 
 angles = Rotation angles (comma separated)
 
-askSendReport = Send bug report? This report is anonymous. Your report will be used to help fix this bug and will never be shared in any commercial context.\r\nFor more information on what is sent, click on "Show details".\r\n\r\nThe data is saved in Microsoft Form. More information in: 
+askSendReport = Send bug report? This report is anonymous. Your report will be used to help fix this bug and will never be shared in any commercial context.\r\nFor more information on what is sent, click on "Show details".\r\n\r\nThe data is saved in Microsoft Forms. More information in: 
 
 backGroundImage = Background image
 
@@ -467,6 +467,7 @@ label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Password:
 label.posts                       = # forum posts
+label.purgeLogs                   = Deletes user records in the course prior to the selected date.
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
@@ -995,6 +996,7 @@ menu.importlogs          = I_mport logs...
 menu.logout              = _Logout
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
+menu.purgeLogs           = Purge logs
 menu.saveall             = Save all as...
 menu.savechart           = _Save chart as...
 menu.theme               = _Themes
@@ -1091,7 +1093,11 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 
 physicsAfterDraw = Enable physics after draw
 
+privacyPolicy = Your suggestions and comments will be used to help improve the application and your email is for sending you answers, it will never be shared in any commercial context.\r\n\r\nThe data is stored in Microsoft Forms. More information at:
+
 prompt.comment = Write here your comments and suggestions (Maximum 4000 characters)
+
+purgePreviousDate = Select date:
 
 root = course
 
@@ -1136,6 +1142,7 @@ text.all                  = All
 text.author               = Authors:
 text.betweendates         = Between {0} and {1} days
 text.cache                = Local Files
+text.comments             = Comments and suggestions
 text.component            = Component
 text.confirmation         = Confirmation
 text.confirmationtext     = Are you sure to remove the cache of the selected course?
@@ -1189,6 +1196,7 @@ text.sectionplaceholder   = Front page
 text.see                  = See 
 text.selectall            = Select/Deselect all
 text.selectedUsers        = Selected users
+text.sended               = It has been sent correctly. Thank you for your comments and/or suggestions.
 text.session              = # of sessions: 
 text.stats                = Statistics
 text.thanks               = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
@@ -1216,7 +1224,7 @@ tooltipDecimals = Decimal tooltip
 
 transitionDuration = Transition duration (ms)
 
-url.microsoftFormPolicy = https://support.microsoft.com/en-gb/office/security-and-privacy-in-microsoft-forms-7e57f9ba-4aeb-4b1b-9e21-b75318532cd9
+url.microsoftFormPolicy = https://www.microsoft.com/en-gb/servicesagreement/
 
 useCircles = Use only circles
 
