--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -155,7 +155,7 @@ alertDaysElapsed = Aviso de \u00FAltima actualizaci\u00F3n (en d\u00EDas)
 
 angles = \u00C1ngulos de rotaci\u00F3n (separado por comas)
 
-askSendReport = \u00BFEnviar informe de errores? Este informe es an\u00F3nimo. Su informe se utilizar\u00E1 para ayudar a solucionar este error y nunca se compartir\u00E1 en ning\u00FAn contexto comercial.\r\nPara m\u00E1s informaci\u00F3n sobre lo que se env\u00EDa, haz clic en "Mostrar detalles".\r\n\r\nLos datos se guardan en Microsoft Form. Mas informaci\u00F3n en: 
+askSendReport = \u00BFEnviar informe de errores? Este informe es an\u00F3nimo. Su informe se utilizar\u00E1 para ayudar a solucionar este error y nunca se compartir\u00E1 en ning\u00FAn contexto comercial.\r\nPara m\u00E1s informaci\u00F3n sobre lo que se env\u00EDa, haz clic en "Mostrar detalles".\r\n\r\nLos datos se guardan en Microsoft Forms. Mas informaci\u00F3n en: 
 
 backGroundImage = Imagen de fondo
 
@@ -467,6 +467,7 @@ label.parselog                    = Parseando los registros...
 label.participants                = Participantes
 label.pass                        = Contrase\u00F1a:
 label.posts                       = # mensajes de foros
+label.purgeLogs                   = Elimina los registros de los usuarios en el curso anteriores a la fecha seleccionada.
 label.relogin                     = Fallo al descargar los registros. Intentando iniciar sesion de nuevo y volver a descargar.
 label.restartapplication          = Necesario reiniciar la aplicaci\u00F3n para que los cambios surtan efecto
 label.restoreversion              = Restaurar a versi\u00F3n:
@@ -995,6 +996,7 @@ menu.importlogs          = I_mportar registros...
 menu.logout              = _Cerrar sesi\u00F3n
 menu.moreinfo            = _M\u00E1s informaci\u00F3n
 menu.photos              = Exportar fotos de los usuarios seleccionados...
+menu.purgeLogs           = Purgar registros
 menu.saveall             = Guardar todo como...
 menu.savechart           = _Guardar gr\u00E1fico como...
 menu.theme               = _Temas
@@ -1091,7 +1093,11 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Con
 
 physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar
 
+privacyPolicy = Sus sugerencias y comentarios se utilizar\u00E1 para ayudar a mejorar la aplicaci\u00F3n y su correo electr\u00F3nico es para enviarte respuestas, nunca se compartir\u00E1 en ning\u00FAn contexto comercial.\r\n\r\nLos datos se guardan en Microsoft Forms. Mas informaci\u00F3n en:
+
 prompt.comment = Escriba aqu\u00ED sus comentarios y sugerencias (M\u00E1ximo 4000 car\u00E1cteres)
+
+purgePreviousDate = Seleccione fecha:
 
 root = curso
 
@@ -1136,6 +1142,7 @@ text.all                  = Todos
 text.author               = Autores:
 text.betweendates         = Entre {0} y {1} d\u00EDas
 text.cache                = Archivos locales
+text.comments             = Comentarios y sugerencias
 text.component            = Componente
 text.confirmation         = Confirmaci\u00F3n
 text.confirmationtext     = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
@@ -1189,6 +1196,7 @@ text.sectionplaceholder   = P\u00E1gina principal
 text.see                  = Ver 
 text.selectall            = Seleccionar/Deseleccionar todos
 text.selectedUsers        = Usuarios seleccionados
+text.sended               = Se ha enviado correctamente. Gracias por sus comentarios y/o sugerencias.
 text.session              = N\u00BA de sesiones: 
 text.stats                = Estad\u00EDsticas
 text.thanks               = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
@@ -1216,7 +1224,7 @@ tooltipDecimals = Informaci\u00F3n de decimales
 
 transitionDuration = Duraci\u00F3n de transici\u00F3n (ms)
 
-url.microsoftFormPolicy = https://support.microsoft.com/es-es/office/seguridad-y-privacidad-en-microsoft-forms-7e57f9ba-4aeb-4b1b-9e21-b75318532cd9
+url.microsoftFormPolicy = https://www.microsoft.com/es-es/servicesagreement/
 
 useCircles = Usar solo c\u00EDrculos
 
