Modificado para poder guardar las caches con las contraseñas nuevas.

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -210,6 +210,8 @@ chartlabel.tableMean      = Mean
 chartlabel.thirdquartile  = Third Quartile
 chartlabel.upperlimit     = Upper Limit
 
+checkBox.saveNewPassword = Use the actual password.
+
 checkbox.betatester        = Receive beta versions
 checkbox.checkupdatesagain = Check for updates at startup
 checkbox.onlyweb           = Web logs only
@@ -461,6 +463,7 @@ label.ncourses                    = # enrolled courses
 label.never                       = Not available
 label.ngroups                     = # groups
 label.of                          = of
+label.offlinePasswordIncorrect    = Incorrect password or not previously logged in.
 label.oldPassword                 = Old Password: 
 label.optionalEmail               = Email address (optional):
 label.parselog                    = Parsing logs...
