--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -210,6 +210,8 @@ chartlabel.tableMean      = Media
 chartlabel.thirdquartile  = Tercer Cuartil
 chartlabel.upperlimit     = L\u00EDmite Superior
 
+checkBox.saveNewPassword = Usar la contrase\u00F1a actual.
+
 checkbox.betatester        = Recibir versiones de prueba
 checkbox.checkupdatesagain = Comprobar actualizaciones en el arranque
 checkbox.onlyweb           = Solo registros de web
@@ -461,6 +463,7 @@ label.ncourses                    = N\u00BA Cursos matriculados
 label.never                       = No disponible
 label.ngroups                     = N\u00BA de grupos
 label.of                          = de
+label.offlinePasswordIncorrect    = Contrase\u00F1a incorrecta o no se ha iniciado sesi\u00F3n con conexi\u00F3n previamente.
 label.oldPassword                 = Contrase\u00F1a antigua: 
 label.optionalEmail               = Correo electr\u00F3nico (opcional):
 label.parselog                    = Parseando los registros...
