Añadido pestaña de matriculación y grafica de barras

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -47,6 +47,11 @@ CUM_LINE.yAxisTitle = Logs
 
 Days = Days
 
+ENROLLMENT_BAR = Enrollment bars
+
+ENROLLMENT_BAR.xAxisTitle = \u200E
+ENROLLMENT_BAR.yAxisTitle = Enrolled users
+
 FORCE_ATLAS_2_BASED = Force Atlas 2
 
 FORUM_BAR = Bars
@@ -351,6 +356,8 @@ edges.width                 = Edges -> Width
 
 emptyGradeColor = Color empty grade
 
+enrollmentBarColor = Bars color
+
 error = Error
 
 error.cantSendReport      = Error: failed to send error
@@ -386,6 +393,8 @@ fontColorXScaleTitle = Font color X-axis
 fontColorYScaleTitle = Font color Y-axis
 
 forum = forum
+
+forumBarColor = Bars color
 
 fourthInterval = Fourth interval
 
@@ -1017,6 +1026,8 @@ message.exportdir             = Export successfully. Review the directory:
 
 minFont = Min font size
 
+minFrequency = Minimum frequency
+
 minWordLength = Min word length
 
 module.assign          = Assignment
@@ -1122,6 +1133,7 @@ tab.clustering           = Clustering
 tab.component            = Components
 tab.coursemodule         = Course Modules
 tab.enrolleduser         = Enrolled
+tab.enrollment           = Enrollment
 tab.event                = Events
 tab.forum                = Forums
 tab.grades               = Grades
@@ -1134,6 +1146,7 @@ tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
 tabs.CALENDAR_EVENT      = Calendar events
+tabs.ENROLLMENT          = Enrollment
 tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
