--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -47,6 +47,11 @@ CUM_LINE.yAxisTitle = Registros
 
 Days = d\u00EDas
 
+ENROLLMENT_BAR = Matriculaciones barras
+
+ENROLLMENT_BAR.xAxisTitle = \u200E
+ENROLLMENT_BAR.yAxisTitle = Usuarios matriculados
+
 FORCE_ATLAS_2_BASED = Force Atlas 2
 
 FORUM_BAR = Barras
@@ -351,6 +356,8 @@ edges.width                 = Aristas -> Borde
 
 emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
 
+enrollmentBarColor = Color barras
+
 error = Error
 
 error.cantSendReport      = Error: no se ha podido enviar el error
@@ -386,6 +393,8 @@ fontColorXScaleTitle = Color de fuente eje X
 fontColorYScaleTitle = Color de fuente eje Y
 
 forum = foro
+
+forumBarColor = Color barras
 
 fourthInterval = Cuarto intervalo
 
@@ -1017,6 +1026,8 @@ message.exportdir             = Exportaci\u00F3n con \u00E9xito. Revise la carpe
 
 minFont = Tama\u00F1o de fuente m\u00EDnima
 
+minFrequency = Frecuencia m\u00EDnima
+
 minWordLength = Longitud m\u00EDnima de la palabra
 
 module.assign          = Tarea
@@ -1096,7 +1107,7 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Con
 
 physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar
 
-privacyPolicy = Sus sugerencias y comentarios se utilizar\u00E1 para ayudar a mejorar la aplicaci\u00F3n y su correo electr\u00F3nico es para enviarte respuestas, nunca se compartir\u00E1 en ning\u00FAn contexto comercial.\r\n\r\nLos datos se guardan en Microsoft Forms. Mas informaci\u00F3n en:
+privacyPolicy = Sus sugerencias y comentarios se utilizar\u00E1 para ayudar a mejorar la aplicaci\u00F3n y su correo electr\u00F3nico para enviarte las respuestas, nunca se compartir\u00E1 en ning\u00FAn contexto comercial.\r\n\r\nLa informaci\u00F3n se guardar\u00E1 en Microsoft Forms. Mas informaci\u00F3n en:
 
 prompt.comment = Escriba aqu\u00ED sus comentarios y sugerencias (M\u00E1ximo 4000 car\u00E1cteres)
 
@@ -1122,6 +1133,7 @@ tab.clustering           = Clustering
 tab.component            = Componentes
 tab.coursemodule         = M\u00F3dulos curso
 tab.enrolleduser         = Matriculados
+tab.enrollment           = Matriculaci\u00F3n
 tab.event                = Eventos
 tab.forum                = Foros
 tab.grades               = Calificaciones
@@ -1134,6 +1146,7 @@ tab.visualization        = An\u00E1lisis visual
 
 tabs.ACTIVITY_COMPLETION = An\u00E1lisis visual - Actividades finalizadas
 tabs.CALENDAR_EVENT      = Eventos del calendario
+tabs.ENROLLMENT          = Matriculaci\u00F3n
 tabs.FORUM               = Foros
 tabs.GRADES              = An\u00E1lisis visual - Calificaciones
 tabs.LOGS                = An\u00E1lisis visual - Registros
