Añadido grafo bipartito de matriculaciones

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -52,6 +52,8 @@ ENROLLMENT_BAR = Enrollment bars
 ENROLLMENT_BAR.xAxisTitle = \u200E
 ENROLLMENT_BAR.yAxisTitle = Enrolled users
 
+ENROLLMENT_SANKEY = Bipartite graph
+
 FORCE_ATLAS_2_BASED = Force Atlas 2
 
 FORUM_BAR = Bars
