--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -52,6 +52,8 @@ ENROLLMENT_BAR = Matriculaciones barras
 ENROLLMENT_BAR.xAxisTitle = \u200E
 ENROLLMENT_BAR.yAxisTitle = Usuarios matriculados
 
+ENROLLMENT_SANKEY = Grafo bipartito
+
 FORCE_ATLAS_2_BASED = Force Atlas 2
 
 FORUM_BAR = Barras
